Bug 482481 - Commands doesn't work on contained contentEditable elements; PromoteInlineRange checks that selection is editable; r+sr=peterv